package domain.entities.testresult;

import domain.entities.EntityId;

public class TestResultId extends EntityId{
	
	public TestResultId(int id) {
		super(id);
	}
	
	
}
